Fix mobile menu + view transition layout shift bugs

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,10 @@
 	scrollbar-width: thin;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 html,
 body {
 	font-family: config.$font-family;
